tests/baselines/reference/varArgConstructorMemberParameter.errors.txt
tests/cases/compiler/varArgConstructorMemberParameter.ts(10,18): error TS1003: Identifier expected.
tests/cases/compiler/varArgConstructorMemberParameter.ts(10,25): error TS1005: ',' expected.


==== tests/cases/compiler/varArgConstructorMemberParameter.ts (2 errors) ====
    class Foo1 {
        constructor (...args: string[]) { }
    }
    
    class Foo2 {
        constructor (public args: string[]) { }
    }
    
    class Foo3 {
        constructor (public ...args: string[]) { }
                     ~~~~~~
!!! error TS1003: Identifier expected.
                            ~~~
!!! error TS1005: ',' expected.
    }
    